Fix broken meter display on mobile

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -61,6 +61,10 @@ body {
   float: right;
 }
 
+.hidden {
+  display: none;
+}
+
 /* === BOXES === */
 
 body,
